Nombres de paquetes, ventanas conectadas